--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -1,8 +1,9 @@
-\documentclass{article}
+\documentclass[a4paper, 12pt]{article}
 
 \usepackage[ngerman]{babel}
 \usepackage[style=ieee]{biblatex}
 \usepackage{parskip}
+\usepackage[top=3cm, bottom=3cm, left=3cm, right=3cm]{geometry}
 
 \linespread{1.5}
 \bibliography{bibliography.bib}
