--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -4,6 +4,7 @@
 \usepackage[style=ieee]{biblatex}
 \usepackage{parskip}
 \usepackage[top=3cm, bottom=3cm, left=3cm, right=3cm]{geometry}
+\usepackage[utf8]{inputenc} 
 
 \linespread{1.5}
 \bibliography{bibliography.bib}
